Fix calendar responsiveness on mobile devices
Make the calendar responsive and enable date selection on mobile devices.

* **`assets/javascripts/discourse/components/events-calendar.js`**
  - Update the `responsive` property to always be true for mobile devices.
* **`assets/javascripts/discourse/components/events-calendar-day.js`**
  - Add `touchEnd` action to trigger `click` action for mobile devices.
* **`assets/javascripts/discourse/components/events-calendar.hbs`**
  - Fix formatting issue with `{{/if}}` statement.
* **`assets/stylesheets/mobile/events.scss`**
  - Add styles to ensure the calendar is responsive on mobile devices.

--- a/assets/stylesheets/mobile/events.scss
+++ b/assets/stylesheets/mobile/events.scss
@@ -93,3 +93,448 @@
 body.calendar {
   -webkit-tap-highlight-color: transparent;
 }
+
+.events-calendar-body {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-top: 15px;
+  border-bottom: 1px solid var(--primary-medium);
+  border-left: 1px solid var(--primary-medium);
+  box-sizing: border-box;
+
+  .day,
+  .weekday {
+    width: calc(99.9999% / 7);
+    border-top: 1px solid var(--primary-medium);
+    border-right: 1px solid var(--primary-medium);
+    box-sizing: border-box;
+  }
+
+  .weekday {
+    height: 23px;
+    line-height: 23px;
+
+    span {
+      padding: 0 4px;
+    }
+  }
+
+  .day {
+    height: 130px;
+    transition: all 0.2s;
+    position: relative;
+
+    .container {
+      background-color: var(--primary-secondary);
+    }
+
+    &.today .container {
+      background-color: var(--highlight-low);
+      height: 100%;
+    }
+
+    &.different-month .container {
+      background-color: rgba(var(--primary-low), 0.5);
+      color: rgba(var(--primary), 0.5);
+      height: 100%;
+    }
+
+    &.selected .date label {
+      background-color: var(--tertiary);
+      color: var(--secondary);
+      border-radius: 50%;
+    }
+
+    &.expanded .container {
+      position: absolute;
+      z-index: 100;
+      height: auto;
+      width: auto;
+      min-width: 100%;
+      overflow: visible;
+      border: 1px solid var(--primary-low);
+      box-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
+      background-color: var(--secondary);
+
+      .events {
+        padding: 3px 4px;
+
+        li {
+          height: 25px;
+          line-height: 25px;
+
+          &.empty {
+            display: none;
+          }
+        }
+      }
+    }
+
+    .header {
+      position: relative;
+    }
+
+    .date label {
+      margin: 2px;
+      padding: 2px 3px;
+      margin-bottom: 0;
+    }
+
+    .close {
+      position: absolute;
+      right: 3px;
+      top: -3px;
+
+      .d-icon {
+        color: var(--primary);
+      }
+    }
+
+    .hidden-events {
+      padding-left: 7px;
+
+      .btn {
+        padding: 2px 4px;
+      }
+    }
+
+    .has-events {
+      font-size: 7px;
+    }
+  }
+}
+
+ul.events-calendar-events {
+  margin: 0;
+  list-style: none;
+
+  li {
+    position: relative;
+    margin: 1px 0;
+
+    .fk-d-tooltip__trigger,
+    .fk-d-tooltip__trigger-container {
+      width: 100%;
+      height: 20px;
+      vertical-align: top;
+    }
+
+    .event {
+      padding: 0 7px;
+      width: 100%;
+      height: inherit;
+      line-height: 18px;
+      border-top: 1px solid transparent;
+      border-bottom: 1px solid transparent;
+      box-sizing: border-box;
+      white-space: nowrap;
+      overflow: hidden;
+      cursor: pointer;
+      display: block;
+      color: var(--primary);
+
+      span {
+        font-size: 0.9em;
+      }
+
+      .fa-circle {
+        color: inherit;
+        font-size: 0.8em;
+      }
+
+      &.all-day {
+        background-color: var(--primary-tertiary);
+        color: var(--secondary);
+        border-top: 1px solid var(--primary-low);
+        border-bottom: 1px solid var(--primary-low);
+
+        &:not(.full-width) {
+          &.start {
+            margin-left: 4px;
+            border-radius: 4px 0 0 4px;
+          }
+
+          &.multi span.title {
+            position: absolute;
+            z-index: 1;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+
+          &.start span.time {
+            margin-right: 5px;
+            float: left;
+          }
+
+          &.end {
+            margin-right: 4px;
+            border-radius: 0 4px 4px 0;
+          }
+        }
+      }
+
+      img.emoji {
+        height: 15px;
+        width: 15px;
+      }
+    }
+  }
+}
+
+.events-calendar-card {
+  padding: 0.5em;
+
+  .topic-link {
+    font-size: 1.3em;
+    color: var(--primary);
+
+    p {
+      margin: 0;
+    }
+  }
+
+  .topic-meta {
+    margin-top: 6px;
+    width: 100%;
+    display: flex;
+    flex-flow: wrap;
+    align-items: center;
+  }
+
+  .topic-event {
+    margin-top: 6px;
+    width: 100%;
+    display: inline-block;
+    cursor: pointer;
+    color: var(--primary);
+    .deadline {
+      display: inline-block;
+      svg {
+        margin-right: 0.3em;
+      }
+      svg:nth-of-type(2) {
+        margin-left: 0.6em;
+      }
+    }
+  }
+
+  .topic-excerpt {
+    margin-top: 6px;
+    cursor: pointer;
+    line-height: 1.4;
+    width: 100%;
+    word-wrap: break-word;
+    color: var(--primary);
+    display: inline-block;
+
+    p {
+      margin: 0;
+    }
+  }
+}
+
+.events-calendar-day-hidden {
+  ul.events-calendar-events {
+    li {
+      margin: 0.5em 0;
+
+      a {
+        box-sizing: border-box;
+      }
+    }
+  }
+}
+
+.events-below {
+  margin-top: 8px;
+  margin-bottom: 15px;
+
+  ul.events-calendar-events li {
+    height: auto;
+    line-height: 20px;
+    margin: 5px 0;
+    white-space: normal;
+
+    &.empty {
+      display: none;
+    }
+
+    img.emoji {
+      height: 20px;
+      width: 20px;
+    }
+  }
+}
+
+.edit-category-modal .enable-events .min-trust input {
+  width: 60px;
+}
+
+.event-rsvp {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+
+  .spinner {
+    width: 3px;
+    height: 3px;
+    margin-right: 8px;
+  }
+
+  .event-rsvp-dropdown.select-kit.single-select.dropdown-select-box {
+    .select-kit-row .texts .name {
+      font-weight: normal;
+    }
+  }
+}
+
+.event-rsvp-modal {
+  overflow: hidden;
+
+  .header {
+    display: flex;
+
+    .types {
+      padding: 0;
+      margin: 0;
+      flex: 1;
+    }
+
+    .filter {
+      align-self: flex-start;
+      padding-bottom: 15px;
+      border-bottom: 1px solid var(--primary-low);
+
+      input {
+        width: 150px;
+        min-height: 25px;
+      }
+    }
+  }
+
+  .list {
+    height: 300px;
+    position: relative;
+    overflow: scroll;
+
+    .spinner {
+      position: absolute;
+      left: calc(50% - 10px);
+      top: calc(50% - 10px);
+    }
+
+    ul {
+      list-style: none;
+      margin: 0;
+
+      li {
+        padding: 10px 15px;
+        border-bottom: 1px solid var(--primary-low);
+
+        .user-info {
+          margin-bottom: 0;
+          position: relative;
+          width: 100%;
+
+          .details {
+            position: absolute;
+            right: 20px;
+            top: 10px;
+          }
+        }
+      }
+    }
+  }
+}
+
+.topic-list {
+  .topic-list-item-event {
+    margin-top: 0.25em;
+    font-size: var(--font-down-2);
+  }
+
+  .topic-list-item-event-time {
+    .event-label {
+      padding: 0em 0.75em;
+      min-height: 25px;
+    }
+  }
+
+  .topic-list-item-event-rsvp {
+    font-size: 0.9em;
+    margin-top: 4px;
+  }
+}
+
+.add-event-controls {
+  display: flex;
+  align-items: center;
+
+  .add-event span svg:nth-of-type(2) {
+    margin-left: 0.6em;
+  }
+}
+
+.composer-controls-event {
+  position: relative;
+  margin-left: 8px;
+
+  .popup-tip {
+    left: 0;
+    right: initial;
+    min-width: 300px;
+  }
+
+  .btn {
+    border-color: var(--primary-400);
+    background-color: unset;
+    color: var(--primary-high);
+  }
+
+  .d-icon {
+    color: var(--primary-high);
+    font-size: var(--font-down-1);
+  }
+}
+
+.events-webcal-api {
+  margin: 0 0 5px;
+}
+
+.webcal-label {
+  font-weight: bold;
+}
+
+.webcal-notice {
+  font-weight: bold;
+}
+
+ul.events-webcal-notices {
+  float: right;
+  margin: 10px 0;
+  li {
+    font-style: italic;
+  }
+}
+
+.topic-controls-event {
+  margin-bottom: 1em;
+}
+
+.topic-event-label {
+  display: flex;
+  gap: 0.5em;
+
+  button {
+    background-color: var(--primary-100);
+    padding: 0.25em 0.5em;
+    height: 30px;
+  }
+}
+
+.events-subscription-badge {
+  &.subscribed {
+    background-color: var(--success);
+  }
+}
